[gd_scene load_steps=9 format=3 uid="uid://062v7sfxunqi"]

[ext_resource type="Script" path="res://tests/level_1/test_level_1.gd" id="1_nakjh"]
[ext_resource type="Script" path="res://tests/jump/player.gd" id="2_1ccls"]
[ext_resource type="TileSet" uid="uid://cecbimox7mcnv" path="res://assets/tilesets/tileset.tres" id="3_6lybg"]
[ext_resource type="PackedScene" uid="uid://cbbuditkrn656" path="res://scenes/characters/player.tscn" id="8_felvl"]
[ext_resource type="PackedScene" uid="uid://dgnp0rhnp0sux" path="res://scenes/stage/camera.tscn" id="9_iyd3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkxl5"]
size = Vector2(15, 14)

[sub_resource type="ViewportTexture" id="ViewportTexture_vfqh4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvs2w"]
size = Vector2(3586, 32)

[node name="Random" type="FeatureNode"]
testing_state = "in_goal,dead"
script = ExtResource("1_nakjh")

[node name="Goal" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("2_1ccls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
shape = SubResource("RectangleShape2D_bkxl5")

[node name="TextureRect" type="TextureRect" parent="Goal"]
offset_left = -8.0
offset_top = -7.0
offset_right = 8.0
offset_bottom = 8.0
texture = SubResource("ViewportTexture_vfqh4")
metadata/_edit_use_anchors_ = true

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(1793, 255)
shape = SubResource("RectangleShape2D_dvs2w")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_6lybg")
format = 2

[node name="Player" parent="." node_paths=PackedStringArray("tilemap") instance=ExtResource("8_felvl")]
testing_state = "is_jumping,position,velocity,environment,tilemap_position"
position = Vector2(86, 207)
collision_layer = 1
script = ExtResource("2_1ccls")
tile_coords_to_type = {
Vector2i(0, 0): 1,
Vector2i(1, 0): 1,
Vector2i(7, 4): 1,
Vector2i(7, 5): 1,
Vector2i(8, 4): 1,
Vector2i(8, 5): 1
}
tilemap = NodePath("../TileMap")

[node name="Hitbox" parent="Player" index="5"]
visible = true

[node name="Big" parent="Player/Hitbox" index="1"]
position = Vector2(0, -6)

[node name="Camera" parent="Player" instance=ExtResource("9_iyd3f")]
limit_top = 0
limit_bottom = 240
limit_smoothed = false
position_smoothing_speed = 16.0

[connection signal="body_entered" from="Goal" to="." method="_on_goal_body_entered"]
[connection signal="body_exited" from="Goal" to="." method="_on_goal_body_exited"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]

[editable path="Player"]
